--- a/Make a menu/task-info.yaml
+++ b/Make a menu/task-info.yaml
@@ -204,6 +204,15 @@ files:
 
     }
   learner_created: false
+- name: src/budget/Menu.java
+  visible: true
+  learner_created: true
+- name: src/budget/Budget.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/projects/76/stages/422/implement#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 03 Dec 2021 13:39:15 UTC
 record: -1
