--- a/Make a menu/task-info.yaml
+++ b/Make a menu/task-info.yaml
@@ -210,9 +210,9 @@ files:
 - name: src/budget/Budget.java
   visible: true
   learner_created: true
-feedback_link: https://hyperskill.org/projects/76/stages/422/implement#comment
+feedback_link: https://hyperskill.org/learn/step/7025#comment
 status: Solved
 feedback:
   message: Congratulations!
-  time: Fri, 03 Dec 2021 13:39:15 UTC
-record: -1
+  time: Fri, 03 Dec 2021 13:55:17 UTC
+record: 2
