--- a/Oh the things you can buy/task-info.yaml
+++ b/Oh the things you can buy/task-info.yaml
@@ -303,6 +303,143 @@ files:
         }
     }
   learner_created: false
-feedback_link: https://hyperskill.org/projects/76/stages/423/implement#comment
-status: Unchecked
-record: -1
+- name: src/budget/Menu.java
+  visible: true
+  text: |
+    package budget;
+
+    import java.util.Scanner;
+
+    public class Menu {
+        private final Scanner scanner = new Scanner(System.in);
+        private Budget budget;
+
+        public Menu() {
+            budget = new Budget();
+        }
+
+        void run() {
+            while (true) {
+                printMenu();
+
+                String choice = scanner.nextLine();
+
+                switch (choice) {
+                    case "1":
+                        addIncome();
+                        break;
+                    case "2":
+                        addPurchase();
+                        break;
+                    case "3":
+                        showListOfPurchases();
+                        break;
+                    case "4":
+                        showBalance();
+                        break;
+                    case "0":
+                        System.out.println("Bye!");
+                        return;
+                    default:
+                        break;
+                }
+            }
+        }
+
+        private void printMenu() {
+            System.out.println("\nChoose your action:\n" +
+                    "1) Add income\n" +
+                    "2) Add purchase\n" +
+                    "3) Show list of purchases\n" +
+                    "4) Balance\n" +
+                    "0) Exit\n");
+        }
+
+        private void addIncome() {
+            System.out.println("Enter income: ");
+            int income = Integer.parseInt(scanner.nextLine());
+            budget.addIncome(income);
+        }
+
+        private void showBalance() {
+            double budgetAmount = budget.getBalance();
+            System.out.printf("Balance: $%.2f%n", budgetAmount > 0 ? budgetAmount : 0);
+        }
+
+        private void addPurchase() {
+            System.out.println("Enter purchase name:");
+            String purchaseName = scanner.nextLine();
+            System.out.println("Enter its price:");
+            String price = scanner.nextLine();
+            budget.addPurchase(purchaseName + " $" + price);
+        }
+
+        private void showListOfPurchases() {
+            budget.showPurchaseList();
+        }
+    }
+  learner_created: true
+- name: src/budget/Budget.java
+  visible: true
+  text: |
+    package budget;
+
+    import java.util.ArrayList;
+    import java.util.List;
+
+    public class Budget {
+        private double balance;
+        private List<String> purchaseList;
+
+        public Budget() {
+            balance = 0.0d;
+            purchaseList = new ArrayList<>();
+        }
+
+        public void addIncome(int income) {
+            this.balance += income;
+            System.out.println("Income was added!");
+        }
+
+        public void addPurchase(String purchase) {
+            purchaseList.add(purchase);
+            balance -= Double.parseDouble(purchase.substring(purchase.lastIndexOf("$") + 1));
+            System.out.println("Purchase was added!");
+        }
+
+        public double getBalance() {
+            return balance;
+        }
+
+        public void showPurchaseList() {
+            if (purchaseList.isEmpty()) {
+                System.out.println("The purchase list is empty");
+            } else {
+                double total = 0.0d;
+                for (String purchase : purchaseList) {
+                    total += Double.parseDouble(purchase.substring(purchase.lastIndexOf("$") + 1));
+                    System.out.println(purchase);
+                }
+                System.out.printf("Total sum: $%.2f%n", total);
+            }
+        }
+    }
+  learner_created: true
+- name: src/budget/Food.java
+  visible: true
+  learner_created: true
+- name: src/budget/Clothes.java
+  visible: true
+  learner_created: true
+- name: src/budget/PurchaseItem.java
+  visible: true
+  learner_created: true
+- name: src/budget/Other.java
+  visible: true
+  learner_created: true
+feedback_link: https://hyperskill.org/learn/step/7026#comment
+status: Solved
+feedback:
+  message: Congratulations!
+  time: Fri, 03 Dec 2021 15:56:54 UTC
+record: 3
