--- a/Memorable purchases/task-info.yaml
+++ b/Memorable purchases/task-info.yaml
@@ -293,6 +293,321 @@ files:
         }
     }
   learner_created: false
+- name: src/budget/Menu.java
+  visible: true
+  text: |
+    package budget;
+
+    import java.util.Scanner;
+
+    public class Menu {
+        private final Scanner scanner = new Scanner(System.in);
+        private BudgetManager budgetManager;
+
+        public Menu() {
+            budgetManager = new BudgetManager();
+        }
+
+        void run() {
+            while (true) {
+                printMenu();
+
+                String choice = scanner.nextLine();
+
+                switch (choice) {
+                    case "1":
+                        addIncome();
+                        break;
+                    case "2":
+                        addPurchaseMenu();
+                        break;
+                    case "3":
+                        showListOfPurchases();
+                        break;
+                    case "4":
+                        showBalance();
+                        break;
+                    case "0":
+                        System.out.println("Bye!");
+                        return;
+                    default:
+                        break;
+                }
+            }
+        }
+
+        private void printMenu() {
+            System.out.println("\nChoose your action:\n" +
+                    "1) Add income\n" +
+                    "2) Add purchase\n" +
+                    "3) Show list of purchases\n" +
+                    "4) Balance\n" +
+                    "0) Exit\n");
+        }
+
+        private void addIncome() {
+            System.out.println("Enter income: ");
+            int income = Integer.parseInt(scanner.nextLine());
+            budgetManager.addIncome(income);
+        }
+
+        private void showBalance() {
+            double budgetAmount = budgetManager.getBalance();
+            System.out.printf("%nBalance: $%.2f%n", budgetAmount > 0 ? budgetAmount : 0.0d);
+        }
+
+        private void addPurchaseMenu() {
+            while (true) {
+                printAddPurchaseMenu();
+                String choice = scanner.nextLine();
+                Category category = null;
+                switch (choice) {
+                    case "1":
+                        category = Category.Food;
+                        break;
+                    case "2":
+                        category = Category.Clothes;
+                        break;
+                    case "3":
+                        category = Category.Entertainment;
+                        break;
+                    case "4":
+                        category = Category.Other;
+                        break;
+                    case "5":
+                        return;
+                    default:
+                        break;
+                }
+
+                addPurchase(category);
+            }
+        }
+
+        private void addPurchase(Category type) {
+            System.out.println("Enter purchase name:");
+            String purchaseName = scanner.nextLine();
+            System.out.println("Enter its price:");
+            double price = Double.parseDouble(scanner.nextLine());
+            budgetManager.addPurchase(new Product(type, purchaseName, price));
+        }
+
+        private void showListOfPurchases() {
+            if (budgetManager.isListEmpty()) {
+                System.out.println("\nThe purchase list is empty!");
+            } else {
+                while (true) {
+                    printListOfPurchasesMenu();
+                    String choice = scanner.nextLine();
+                    Category category = null;
+
+                    switch (choice) {
+                        case "1":
+                            category = Category.Food;
+                            break;
+                        case "2":
+                            category = Category.Clothes;
+                            break;
+                        case "3":
+                            category = Category.Entertainment;
+                            break;
+                        case "4":
+                            category = Category.Other;
+                            break;
+                        case "5":
+                            category = Category.All;
+                            break;
+                        case "6":
+                            return;
+                        default:
+                            break;
+                    }
+                    budgetManager.showAllPurchaseList(category);
+                }
+            }
+        }
+
+        private void printAddPurchaseMenu() {
+            System.out.println("\nChoose the type of purchase\n" +
+                    "1) Food\n" +
+                    "2) Clothes\n" +
+                    "3) Entertainment\n" +
+                    "4) Other\n" +
+                    "5) Back\n");
+        }
+
+        private void printListOfPurchasesMenu() {
+            System.out.println("\nChoose the type of purchases\n" +
+                    "1) Food\n" +
+                    "2) Clothes\n" +
+                    "3) Entertainment\n" +
+                    "4) Other\n" +
+                    "5) All\n" +
+                    "6) Back\n");
+        }
+    }
+  learner_created: true
+- name: src/budget/BudgetManager.java
+  visible: true
+  text: |
+    package budget;
+
+    import java.util.ArrayList;
+    import java.util.List;
+
+    public class BudgetManager {
+        public static final String THE_PURCHASE_LIST_IS_EMPTY = "The purchase list is empty";
+        private final List<Product> purchaseList;
+        private double balance;
+
+
+        public BudgetManager() {
+            balance = 0.0d;
+            purchaseList = new ArrayList<>();
+        }
+
+        public void addIncome(int income) {
+            this.balance += income;
+            System.out.println("Income was added!");
+        }
+
+        public void addPurchase(Product product) {
+            purchaseList.add(product);
+            balance -= product.getPrice();
+            System.out.println("Purchase was added!");
+        }
+
+        public double getBalance() {
+            return balance;
+        }
+
+        public void showAllPurchaseList(Category type) {
+            double total = 0.0d;
+            System.out.println(type.name() + ":");
+            switch (type) {
+                case Food:
+                    if (purchaseList.stream().noneMatch(e -> e.getCategory() == Category.Food)) {
+                        System.out.println(THE_PURCHASE_LIST_IS_EMPTY);
+                        return;
+                    } else {
+                        total = purchaseList.stream()
+                                .filter(e -> e.getCategory() == Category.Food)
+                                .mapToDouble(Product::getPrice)
+                                .sum();
+                        purchaseList.stream()
+                                .filter(e -> e.getCategory() == Category.Food)
+                                .forEach(System.out::println);
+                    }
+                    break;
+                case Clothes:
+                    if (purchaseList.stream().noneMatch(e -> e.getCategory() == Category.Clothes)) {
+                        System.out.println(THE_PURCHASE_LIST_IS_EMPTY);
+                        return;
+                    } else {
+                        total = purchaseList.stream()
+                                .filter(e -> e.getCategory() == Category.Clothes)
+                                .mapToDouble(Product::getPrice)
+                                .sum();
+                        purchaseList.stream()
+                                .filter(e -> e.getCategory() == Category.Clothes)
+                                .forEach(System.out::println);
+                    }
+                    break;
+                case Entertainment:
+                    if (purchaseList.stream().noneMatch(e -> e.getCategory() == Category.Entertainment)) {
+                        System.out.println(THE_PURCHASE_LIST_IS_EMPTY);
+                        return;
+                    } else {
+                        total = purchaseList.stream()
+                                .filter(e -> e.getCategory() == Category.Entertainment)
+                                .mapToDouble(Product::getPrice)
+                                .sum();
+                        purchaseList.stream()
+                                .filter(e -> e.getCategory() == Category.Entertainment)
+                                .forEach(System.out::println);
+                    }
+                    break;
+                case Other:
+                    if (purchaseList.stream().noneMatch(e -> e.getCategory() == Category.Other)) {
+                        System.out.println(THE_PURCHASE_LIST_IS_EMPTY);
+                        return;
+                    } else {
+                        total = purchaseList.stream()
+                                .filter(e -> e.getCategory() == Category.Other)
+                                .mapToDouble(Product::getPrice)
+                                .sum();
+                        purchaseList.stream()
+                                .filter(e -> e.getCategory() == Category.Other)
+                                .forEach(System.out::println);
+                    }
+                    break;
+                case All:
+                    total = purchaseList.stream()
+                            .mapToDouble(Product::getPrice)
+                            .sum();
+                    purchaseList.forEach(System.out::println);
+                    break;
+                default:
+                    break;
+            }
+            System.out.printf("Total sum: $%.2f%n", total);
+
+        }
+
+        public boolean isListEmpty() {
+            return purchaseList.isEmpty();
+        }
+    }
+  learner_created: true
+- name: src/budget/Category.java
+  visible: true
+  text: |
+    package budget;
+
+    public enum Category {
+        Food, Clothes, Entertainment, Other, All
+    }
+  learner_created: true
+- name: src/budget/Product.java
+  visible: true
+  text: |
+    package budget;
+
+    public class Product {
+        private Category category;
+        private String name;
+        private double price;
+
+        public Product(Category category, String name, double price) {
+            this.category = category;
+            this.name = name;
+            this.price = price;
+        }
+
+        public Category getCategory() {
+            return category;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public double getPrice() {
+            return price;
+        }
+
+        @Override
+        public String toString() {
+            return String.format("%s $%.2f", name, price);
+        }
+    }
+  learner_created: true
+- name: src/budget/FileOperations.java
+  visible: true
+  learner_created: true
 feedback_link: https://hyperskill.org/learn/step/7027#comment
-status: Unchecked
+status: Failed
+feedback:
+  message: Compilation Failed
+  time: Fri, 03 Dec 2021 20:47:46 UTC
 record: -1
