JBA - Budget Manager - Stage 4/5: Memorable purchases finished with Serializable

--- a/Memorable purchases/task-info.yaml
+++ b/Memorable purchases/task-info.yaml
@@ -602,12 +602,12 @@ files:
         }
     }
   learner_created: true
-- name: src/budget/FileOperations.java
+- name: purchases.txt
   visible: true
   learner_created: true
 feedback_link: https://hyperskill.org/learn/step/7027#comment
-status: Failed
+status: Solved
 feedback:
-  message: Compilation Failed
-  time: Fri, 03 Dec 2021 20:47:46 UTC
+  message: Congratulations!
+  time: Fri, 03 Dec 2021 21:15:26 UTC
 record: -1
